# building_reusable_code_with_rust

./: .gitignore  Add.rs  CLAUDE.md  Fn_FnMut_FnOnce.rs  From_Into.rs  IntoIterator.rs  NOTES.md  assertions_macro.rs  associate_type.rs  associate_type_restriction.rs  cfg_macro.rs  cfg_macro_LEARNING_GUIDE.md  cfg_macro_PROJECT_SUMMARY.md  cfg_macro_QUICK_REFERENCE.md  cfg_macro_README.md  chaining.rs  closures.rs  consuming_adaptors.rs  copy.rs  copy_before.rs  copy_derive.rs  default.rs  drop.rs  dynamic_dispatch.rs  enum-option.rs  enum_result.rs  env_macro.rs  fold.rs  for.rs  format_macro.rs  formatting.rs  function_move.rs  generic_demo.rs  generic_implementation.rs  generic_struct.rs  generic_vec.rs  hello_world_macro.rs  impl.rs  include_macro.rs  infinite.rs  (+28 more)
.claude/: settings.local.json
animal/: dog.rs  mod.rs
example-binary/: Cargo.toml
example-library/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
hello_macro/src/: lib.rs
hello_world/: Cargo.toml  LEARNING_GUIDE.md  PROJECT_SUMMARY.md  README.md
hello_world/.claude/: settings.local.json
hello_world/src/: main.rs
rand_demo/: Cargo.toml
rand_demo/src/: main.rs
